--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -17,6 +17,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Collection of Data\n",
+    "\n",
+    "This section collects historical data for specified ETFs using the `yfinance` library. The data includes adjusted close prices for each ETF within the specified date range.\n",
+    "\n",
+    "#### Define the Tickers\n",
+    "\n",
+    "A list of Exchange-Traded Fund (ETF) symbols is defined to download data for these tickers.\n",
+    "\n",
+    "#### Download Historical Data\n",
+    "\n",
+    "Using the `yfinance` library, historical data for each ETF is downloaded within the specified date range.\n",
+    "\n",
+    "#### Keep Adjusted Close Prices\n",
+    "\n",
+    "The adjusted close prices are extracted from the downloaded data. Adjusted close prices account for dividends and stock splits.\n",
+    "\n",
+    "#### Save Data to CSV\n",
+    "\n",
+    "The adjusted close prices are saved to a CSV file named `etf_prices.csv`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
