--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "#### Define the Tickers\n",
     "\n",
-    "A list of Exchange-Traded Fund (ETF) symbols is defined to download data for these tickers.\n",
+    "A list of Exchange-Traded Fund (ETF) symbols is defined to download data for these tickers; each ETF has a (brief) description.\n",
     "\n",
     "#### Download Historical Data\n",
     "\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,12 +58,27 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "\n",
-    "# List of ETF tickers\n",
-    "tickers = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
+    "# List of ETF tickers and their descriptions\n",
+    "tickers = [\n",
+    "    'FXE',  # Invesco CurrencyShares Euro Trust\n",
+    "    'EWJ',  # iShares MSCI Japan ETF\n",
+    "    'GLD',  # SPDR Gold Shares\n",
+    "    'QQQ',  # Invesco QQQ Trust (tracks the Nasdaq-100 Index)\n",
+    "    'SPY',  # SPDR S&P 500 ETF Trust\n",
+    "    'SHV',  # iShares Short Treasury Bond ETF\n",
+    "    'DBA',  # Invesco DB Agriculture Fund\n",
+    "    'USO',  # United States Oil Fund\n",
+    "    'XBI',  # SPDR S&P Biotech ETF\n",
+    "    'ILF',  # iShares Latin America 40 ETF\n",
+    "    'EPP',  # iShares MSCI Pacific ex Japan ETF\n",
+    "    'FEZ'   # SPDR EURO STOXX 50 ETF\n",
+    "]\n",
     "\n",
-    "# Download historical data for each ETF\n",
+    "# Define the date range\n",
     "start_date = '2007-03-01'\n",
     "end_date = '2024-03-31'\n",
+    "\n",
+    "# Download historical data for each ETF\n",
     "data = yf.download(tickers, start=start_date, end=end_date)\n",
     "\n",
     "# Only keep the adjusted close prices\n",
