--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -96,6 +96,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Construction of the Factor Model\n",
+    "\n",
+    "This section constructs the factor model using Fama-French factors. The Fama-French three-factor model is commonly used in finance to describe stock returns. It includes market risk, size risk, and value risk factors.\n",
+    "\n",
+    "#### Load the Fama-French Factors\n",
+    "\n",
+    "The Fama-French factors are loaded from a CSV file. These factors will be used to construct the factor model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -153,6 +166,26 @@
     "    print(ff_data.head())  # Display the first few rows to verify\n",
     "except Exception as e:\n",
     "    print(f\"Error reading the CSV file: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explanation\n",
+    "\n",
+    "1. **Import Libraries**:\n",
+    "   - We import the `pandas` library for data manipulation.\n",
+    "\n",
+    "2. **Load the Fama-French Factors**:\n",
+    "   - **file_path**: Specifies the path to the Fama-French factors CSV file.\n",
+    "   - **try block**: Handles reading the CSV file and manages potential errors.\n",
+    "   - **Inspecting the first 10 lines**: Checks the initial rows to determine the header and data format.\n",
+    "   - **skiprows parameter**: Adjusted based on the CSV inspection to skip non-data rows.\n",
+    "   - **pd.read_csv**: Reads the CSV file into a DataFrame, skipping the specified rows.\n",
+    "   - **pd.to_datetime**: Converts the index to datetime format.\n",
+    "   - **ff_data.loc**: Filters the data to the specified date range ('2007-03-01' to '2024-03-31').\n",
+    "   - **print(ff_data.head())**: Displays the first few rows of the DataFrame for verification."
    ]
   },
   {
