--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +189,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Factor Model Construction and Analysis\n",
+    "\n",
+    "In this section, we will load and process the Fama-French factors, merge them with ETF returns, and estimate the factor loadings for each ETF.\n",
+    "\n",
+    "#### Load and Process Fama-French Factors\n",
+    "\n",
+    "This function loads the Fama-French factors from a CSV file, processes the data, and returns it for the specified date range."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,6 +278,34 @@
     "    factor_loadings_df.to_csv('factor_loadings.csv')\n",
     "\n",
     "    print(factor_loadings_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explanation\n",
+    "\n",
+    "1. **Import Libraries**:\n",
+    "   - `pandas` is used for data manipulation.\n",
+    "   - `statsmodels.api` is used for statistical models, including OLS regression.\n",
+    "\n",
+    "2. **Function to Load and Process Fama-French Factors**:\n",
+    "   - Loads the Fama-French factors data, skipping metadata lines.\n",
+    "   - Converts the index to datetime format and drops invalid dates.\n",
+    "   - Sorts the index and slices the data for the specified date range.\n",
+    "\n",
+    "3. **Usage Example**:\n",
+    "   - Defines the date range and file path.\n",
+    "   - Calls the `fama_french_factors` function to load and process the Fama-French factors.\n",
+    "   - Loads ETF prices and calculates daily returns.\n",
+    "\n",
+    "4. **Merge ETF Returns with Fama-French Factors**:\n",
+    "   - Merges ETF returns with Fama-French factors using an inner join.\n",
+    "\n",
+    "5. **Estimate Factor Loadings**:\n",
+    "   - For each ETF, estimates factor loadings (coefficients) using OLS regression.\n",
+    "   - Converts the results to a DataFrame and saves to a CSV file."
    ]
   },
   {
