--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -312,6 +312,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3.5 Analysis of Estimator Coefficients\n",
+    "\n",
+    "In this section, we analyze the estimated factor loadings (coefficients) for a subset of ETFs. The coefficients are derived from the Fama-French three-factor model, which includes Alpha, Market Risk Premium (Mkt-RF), Size (SMB), and Value (HML) factors.\n",
+    "\n",
+    "## Estimated Coefficients\n",
+    "\n",
+    "Here are the estimated coefficients for the selected ETFs:\n",
+    "\n",
+    "| ETF | Alpha | Mkt-RF | SMB | HML |\n",
+    "|-----|-------|--------|-----|-----|\n",
+    "| DBA | -0.000032 | 0.002360 | -0.000186 | 0.000630 |\n",
+    "| EPP | -0.000142 | 0.010475 | -0.000677 | 0.001387 |\n",
+    "| EWJ | -0.000139 | 0.007755 | -0.000921 | 0.000244 |\n",
+    "| FEZ | -0.000184 | 0.011116 | -0.000657 | 0.001652 |\n",
+    "| FXE | -0.000074 | 0.001090 | 0.000042 | 0.000097 |\n",
+    "\n",
+    "## Interpretation\n",
+    "\n",
+    "### Alpha\n",
+    "- **Alpha** represents the ETF's performance relative to the expected return based on the three-factor model. A positive alpha indicates the ETF has outperformed the model's prediction, while a negative alpha suggests underperformance.\n",
+    "- **Observation**: All selected ETFs have negative alpha values, indicating underperformance relative to the model's prediction.\n",
+    "\n",
+    "### Market Risk Premium (Mkt-RF)\n",
+    "- **Mkt-RF** represents the sensitivity of the ETF's returns to the market risk premium (the excess return of the market over the risk-free rate). Higher values indicate higher sensitivity to market movements.\n",
+    "- **Observation**: FEZ and EPP have the highest market risk premiums, suggesting they are more sensitive to market movements. FXE has the lowest sensitivity among the selected ETFs.\n",
+    "\n",
+    "### Size (SMB)\n",
+    "- **SMB** (Small Minus Big) represents the ETF's sensitivity to returns of small-cap stocks relative to large-cap stocks. A positive value indicates higher sensitivity to small-cap stocks.\n",
+    "- **Observation**: All selected ETFs have negative SMB coefficients, indicating a preference or higher exposure to large-cap stocks over small-cap stocks.\n",
+    "\n",
+    "### Value (HML)\n",
+    "- **HML** (High Minus Low) represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio). A positive value indicates higher sensitivity to value stocks.\n",
+    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### $ 3. \\; \\; \\; \\text{Optim(ization)} $"
    ]
   },
