--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -340,11 +340,15 @@
     "\n",
     "### Size (SMB)\n",
     "- **SMB** (Small Minus Big) represents the ETF's sensitivity to returns of small-cap stocks relative to large-cap stocks. A positive value indicates higher sensitivity to small-cap stocks.\n",
-    "- **Observation**: All selected ETFs have negative SMB coefficients, indicating a preference or higher exposure to large-cap stocks over small-cap stocks.\n",
+    "- **Observation**: Most selected ETFs have negative SMB coefficients, indicating a preference or higher exposure to large-cap stocks over small-cap stocks. However, FXE has a positive SMB coefficient, indicating a slight preference for small-cap stocks.\n",
     "\n",
     "### Value (HML)\n",
     "- **HML** (High Minus Low) represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio). A positive value indicates higher sensitivity to value stocks.\n",
-    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity."
+    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity.\n",
+    "\n",
+    "## Synthesis\n",
+    "\n",
+    "The analysis of the estimator coefficients provides insights into the risk factors affecting each ETF. The negative alphas suggest that these ETFs have underperformed relative to the model's expectations. The varying coefficients for market risk premium, size, and value factors highlight the different sensitivities and exposures of these ETFs to market conditions, size segments, and value versus growth stocks."
    ]
   },
   {
