--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "In this section, we analyze the estimated factor loadings (coefficients) for a subset of ETFs. The coefficients are derived from the Fama-French three-factor model, which includes Alpha, Market Risk Premium (Mkt-RF), Size (SMB), and Value (HML) factors.\n",
     "\n",
-    "## Estimated Coefficients\n",
+    "## Estimated Coefficients in Absolute Basis\n",
     "\n",
     "Here are the estimated coefficients for the selected ETFs:\n",
     "\n",
@@ -327,6 +327,18 @@
     "| EWJ | -0.000139 | 0.007755 | -0.000921 | 0.000244 |\n",
     "| FEZ | -0.000184 | 0.011116 | -0.000657 | 0.001652 |\n",
     "| FXE | -0.000074 | 0.001090 | 0.000042 | 0.000097 |\n",
+    "\n",
+    "## Estimated Coefficients in Percentage Basis\n",
+    "\n",
+    "Here are the estimated coefficients for the selected ETFs, displayed in percentage terms:\n",
+    "\n",
+    "| ETF | Alpha (%) | Mkt-RF (%) | SMB (%) | HML (%) |\n",
+    "|-----|-----------|------------|---------|---------|\n",
+    "| DBA | -0.0032   | 0.2360     | -0.0186 | 0.0630  |\n",
+    "| EPP | -0.0142   | 1.0475     | -0.0677 | 0.1387  |\n",
+    "| EWJ | -0.0139   | 0.7755     | -0.0921 | 0.0244  |\n",
+    "| FEZ | -0.0184   | 1.1116     | -0.0657 | 0.1652  |\n",
+    "| FXE | -0.0074   | 0.1090     | 0.0042  | 0.0097  |\n",
     "\n",
     "## Interpretation\n",
     "\n",
