--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -340,7 +340,7 @@
     "| FEZ | -0.0184   | 1.1116     | -0.0657 | 0.1652  |\n",
     "| FXE | -0.0074   | 0.1090     | 0.0042  | 0.0097  |\n",
     "\n",
-    "## Interpretation\n",
+    "## Interpretation in Absolute Basis\n",
     "\n",
     "### Alpha\n",
     "- **Alpha** represents the ETF's performance relative to the expected return based on the three-factor model. A positive alpha indicates the ETF has outperformed the model's prediction, while a negative alpha suggests underperformance.\n",
@@ -356,6 +356,24 @@
     "\n",
     "### Value (HML)\n",
     "- **HML** (High Minus Low) represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio). A positive value indicates higher sensitivity to value stocks.\n",
+    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity.\n",
+    "\n",
+    "## Interpretation in Percentage Basis\n",
+    "\n",
+    "### Alpha\n",
+    "- **Alpha (%)** represents the ETF's performance relative to the expected return based on the three-factor model, expressed in percentage terms.\n",
+    "- **Observation**: All selected ETFs have negative alpha values, indicating underperformance relative to the model's prediction.\n",
+    "\n",
+    "### Market Risk Premium (Mkt-RF)\n",
+    "- **Mkt-RF (%)** represents the sensitivity of the ETF's returns to the market risk premium, expressed in percentage terms.\n",
+    "- **Observation**: FEZ and EPP have the highest market risk premiums, suggesting they are more sensitive to market movements. FXE has the lowest sensitivity among the selected ETFs.\n",
+    "\n",
+    "### Size (SMB)\n",
+    "- **SMB (%)** represents the ETF's sensitivity to returns of small-cap stocks relative to large-cap stocks, expressed in percentage terms.\n",
+    "- **Observation**: Most selected ETFs have negative SMB coefficients, indicating a preference or higher exposure to large-cap stocks over small-cap stocks. However, FXE has a positive SMB coefficient, indicating a slight preference for small-cap stocks.\n",
+    "\n",
+    "### Value (HML)\n",
+    "- **HML (%)** represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio), expressed in percentage terms.\n",
     "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity.\n",
     "\n",
     "## Synthesis\n",
