--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -376,9 +376,9 @@
     "- **HML (%)** represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio), expressed in percentage terms.\n",
     "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity.\n",
     "\n",
-    "## Synthesis\n",
+    "## Synthesis (Executive Summary)\n",
     "\n",
-    "The analysis of the estimator coefficients provides insights into the risk factors affecting each ETF. The negative alphas suggest that these ETFs have underperformed relative to the model's expectations. The varying coefficients for market risk premium, size, and value factors highlight the different sensitivities and exposures of these ETFs to market conditions, size segments, and value versus growth stocks."
+    "The analysis of the estimator coefficients in percentage terms provides insights into the risk factors affecting each ETF. The negative alphas suggest that these ETFs have underperformed relative to the model's expectations. The varying coefficients for market risk premium, size, and value factors highlight the different sensitivities and exposures of these ETFs to market conditions, size segments, and value versus growth stocks. Notably, FXE has a positive SMB coefficient, indicating a preference for small-cap stocks."
    ]
   },
   {
