--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -316,6 +316,12 @@
     "\n",
     "In this section, we analyze the estimated factor loadings (coefficients) for a subset of ETFs. The coefficients are derived from the Fama-French three-factor model, which includes Alpha, Market Risk Premium (Mkt-RF), Size (SMB), and Value (HML) factors.\n",
     "\n",
+    "## **Synthesis (Executive Summary)**\n",
+    "\n",
+    "The analysis of the estimator coefficients in percentage terms provides insights into the risk factors affecting each ETF. The negative alphas suggest that these ETFs have underperformed relative to the model's expectations. The varying coefficients for market risk premium, size, and value factors highlight the different sensitivities and exposures of these ETFs to market conditions, size segments, and value versus growth stocks. Notably, FXE has a positive SMB coefficient, indicating a preference for small-cap stocks.\n",
+    "\n",
+    "---\n",
+    "\n",
     "## Estimated Coefficients in Absolute Basis\n",
     "\n",
     "Here are the estimated coefficients for the selected ETFs:\n",
@@ -374,11 +380,7 @@
     "\n",
     "### Value (HML)\n",
     "- **HML (%)** represents the ETF's sensitivity to value stocks (high book-to-market ratio) relative to growth stocks (low book-to-market ratio), expressed in percentage terms.\n",
-    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity.\n",
-    "\n",
-    "## Synthesis (Executive Summary)\n",
-    "\n",
-    "The analysis of the estimator coefficients in percentage terms provides insights into the risk factors affecting each ETF. The negative alphas suggest that these ETFs have underperformed relative to the model's expectations. The varying coefficients for market risk premium, size, and value factors highlight the different sensitivities and exposures of these ETFs to market conditions, size segments, and value versus growth stocks. Notably, FXE has a positive SMB coefficient, indicating a preference for small-cap stocks."
+    "- **Observation**: FEZ and EPP show higher sensitivity to value stocks, while EWJ shows lower sensitivity."
    ]
   },
   {
