--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -386,6 +386,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Alpha (%)  Mkt-RF (%)  SMB (%)  HML (%)\n",
+      "ETF                                         \n",
+      "DBA    -0.0032      0.2360  -0.0186   0.0630\n",
+      "EPP    -0.0142      1.0475  -0.0677   0.1387\n",
+      "EWJ    -0.0139      0.7755  -0.0921   0.0244\n",
+      "FEZ    -0.0184      1.1116  -0.0657   0.1652\n",
+      "FXE    -0.0074      0.1090   0.0042   0.0097\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a DataFrame for the coefficients in percentage terms\n",
+    "coefficients_pct = {\n",
+    "    'ETF': ['DBA', 'EPP', 'EWJ', 'FEZ', 'FXE'],\n",
+    "    'Alpha (%)': [-0.0032, -0.0142, -0.0139, -0.0184, -0.0074],\n",
+    "    'Mkt-RF (%)': [0.2360, 1.0475, 0.7755, 1.1116, 0.1090],\n",
+    "    'SMB (%)': [-0.0186, -0.0677, -0.0921, -0.0657, 0.0042],\n",
+    "    'HML (%)': [0.0630, 0.1387, 0.0244, 0.1652, 0.0097]\n",
+    "}\n",
+    "\n",
+    "df_pct = pd.DataFrame(coefficients_pct)\n",
+    "df_pct.set_index('ETF', inplace=True)\n",
+    "print(df_pct)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
