--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -432,20 +432,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $ 3.05 \\; \\; \\text{m i s c} $ "
+    "#### $ 3.05 \\; \\; \\text{m i s c} $ \n",
+    "\n",
+    "## Validate Covariance Matrices\n",
+    "\n",
+    "We need to ensure that our covariance matrices are symmetric/Hermitian. This is crucial for accurate risk and portfolio analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Covariance matrix is symmetric: True\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def is_symmetric(matrix, tol=1e-8):\n",
-    "    \"\"\"Check if a matrix is symmetric/Hermitian within a tolerance.\"\"\"\n",
-    "    return np.allclose(matrix, matrix.T, atol=tol)"
+    "# Load ETF returns\n",
+    "etf_returns = pd.read_csv('etf_prices.csv', index_col=0, parse_dates=True).pct_change().dropna()\n",
+    "\n",
+    "# Calculate the covariance matrix\n",
+    "cov_matrix = etf_returns.cov()\n",
+    "\n",
+    "# Check if the covariance matrix is symmetric\n",
+    "is_symmetric = np.allclose(cov_matrix, cov_matrix.T)\n",
+    "print(f\"Covariance matrix is symmetric: {is_symmetric}\")\n",
+    "\n",
+    "# If using complex numbers, also check if it is Hermitian\n",
+    "if not is_symmetric:\n",
+    "    is_hermitian = np.allclose(cov_matrix, cov_matrix.T.conj())\n",
+    "    print(f\"Covariance matrix is Hermitian: {is_hermitian}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpretation of Results\n",
+    "\n",
+    "- **Symmetric Covariance Matrix**: A symmetric covariance matrix indicates that the variance between any two assets is consistent in both directions.\n",
+    "- **Hermitian Covariance Matrix**: For complex numbers, a Hermitian matrix is required to ensure valid covariance calculations.\n",
+    "\n",
+    "### Results\n",
+    "- The output will confirm whether the covariance matrix is symmetric or Hermitian. If not, further investigation and correction are needed."
    ]
   },
   {
