--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +475,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpretation of Results\n",
+    "## Explanation\n",
     "\n",
-    "- **Symmetric Covariance Matrix**: A symmetric covariance matrix indicates that the variance between any two assets is consistent in both directions.\n",
-    "- **Hermitian Covariance Matrix**: For complex numbers, a Hermitian matrix is required to ensure valid covariance calculations.\n",
+    "1. **Load ETF Returns**:\n",
+    "   - Read the ETF price data from `etf_prices.csv`.\n",
+    "   - Calculate the daily returns using the percentage change method.\n",
+    "\n",
+    "2. **Calculate Covariance Matrix**:\n",
+    "   - Use `etf_returns.cov()` to compute the covariance matrix of the ETF returns.\n",
+    "\n",
+    "3. **Check Symmetry**:\n",
+    "   - Use `np.allclose(cov_matrix, cov_matrix.T)` to verify if the covariance matrix is symmetric.\n",
+    "\n",
+    "4. **Check Hermitian (if necessary)**:\n",
+    "   - If the covariance matrix is not symmetric and involves complex numbers, use `np.allclose(cov_matrix, cov_matrix.T.conj())` to check if it is Hermitian.\n",
     "\n",
     "### Results\n",
-    "- The output will confirm whether the covariance matrix is symmetric or Hermitian. If not, further investigation and correction are needed."
+    "\n",
+    "- The output confirms whether the covariance matrix is symmetric. A symmetric covariance matrix indicates that the variance between any two assets is consistent in both directions."
    ]
   },
   {
