--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -492,7 +492,13 @@
     "\n",
     "### Results\n",
     "\n",
-    "- The output confirms whether the covariance matrix is symmetric. A symmetric covariance matrix indicates that the variance between any two assets is consistent in both directions."
+    "- The output confirms whether the covariance matrix is symmetric. A symmetric covariance matrix indicates that the variance between any two assets is consistent in both directions.\n",
+    "\n",
+    "## Result\n",
+    "\n",
+    "- **Covariance matrix is symmetric: True**\n",
+    "\n",
+    "The covariance matrix is symmetric, indicating that the variance between any two assets is consistent in both directions. This validation ensures accurate risk and portfolio analysis."
    ]
   },
   {
