--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -498,14 +498,20 @@
     "\n",
     "- **Covariance matrix is symmetric: True**\n",
     "\n",
-    "The covariance matrix is symmetric, indicating that the variance between any two assets is consistent in both directions. This validation ensures accurate risk and portfolio analysis."
+    "The covariance matrix is symmetric, indicating that the variance between any two assets is consistent in both directions. This validation ensures accurate risk and portfolio analysis.\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $ 3.1 \\; \\; \\text{Strat} \\; \\; \\mathcal{I} $ "
+    "#### $ 3.1 \\; \\; \\text{Strat} \\; \\; \\mathcal{I} $ \n",
+    "\n",
+    "## Trading Strategies Explanation\n",
+    "\n",
+    "In this section, we will discuss the trading strategies that will be implemented and backtested using the factor model. The strategies aim to leverage the information provided by the factor loadings to generate returns."
    ]
   },
   {
