--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -509,9 +509,44 @@
    "source": [
     "#### $ 3.1 \\; \\; \\text{Strat} \\; \\; \\mathcal{I} $ \n",
     "\n",
-    "## Trading Strategies Explanation\n",
+    "## Investment Strategies Explanation\n",
     "\n",
-    "In this section, we will discuss the trading strategies that will be implemented and backtested using the factor model. The strategies aim to leverage the information provided by the factor loadings to generate returns."
+    "In this section, we will discuss the investment strategies that will be implemented and backtested using the factor model. The strategies aim to leverage the information provided by the factor loadings to generate returns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Long-Short Strategy Based on Market Risk Premium\n",
+    "\n",
+    "This strategy involves taking long positions in ETFs when the market risk premium (Mkt-RF) is positive and short positions when it is negative. The idea is to exploit the expected positive returns when the market is performing well and hedge against losses when the market is underperforming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def long_short_strategy(returns, factors):\n",
+    "    \"\"\"\n",
+    "    Long when market risk premium is positive, short when it is negative.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    returns (DataFrame): Daily returns of ETFs.\n",
+    "    factors (DataFrame): Fama-French factor data.\n",
+    "    \n",
+    "    Returns:\n",
+    "    DataFrame: Strategy returns.\n",
+    "    \"\"\"\n",
+    "    strategy_returns = returns.copy()\n",
+    "    market_return = factors['Mkt-RF']\n",
+    "    \n",
+    "    strategy_returns[market_return > 0] = returns[market_return > 0]\n",
+    "    strategy_returns[market_return <= 0] = -returns[market_return <= 0]\n",
+    "    \n",
+    "    return strategy_returns"
    ]
   },
   {
