--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -507,20 +507,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $ 3.1 \\; \\; \\text{Strat} \\; \\; \\mathcal{I} $ \n",
-    "\n",
     "## Investment Strategies Explanation\n",
     "\n",
-    "In this section, we will discuss the investment strategies that will be implemented and backtested using the factor model. The strategies aim to leverage the information provided by the factor loadings to generate returns."
+    "In this section, we will discuss the investment strategies that will be implemented and backtested using the factor model. The strategies aim to leverage the information provided by the factor loadings to generate returns.\n",
+    "\n",
+    "#### $ 3.1 \\; \\; \\text{Strat} \\; \\; \\mathcal{I} $ "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Long-Short Strategy Based on Market Risk Premium\n",
+    "## Optimization Strategy I\n",
     "\n",
-    "This strategy involves taking long positions in ETFs when the market risk premium (Mkt-RF) is positive and short positions when it is negative. The idea is to exploit the expected positive returns when the market is performing well and hedge against losses when the market is underperforming."
+    "This strategy uses convex optimization to determine the optimal weights for a portfolio based on expected returns, the covariance matrix, and factor loadings. The objective is to maximize the return minus the risk-adjusted return, subject to certain constraints."
    ]
   },
   {
