--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -520,7 +520,11 @@
    "source": [
     "## Optimization Strategy I\n",
     "\n",
-    "This strategy uses convex optimization to determine the optimal weights for a portfolio based on expected returns, the covariance matrix, and factor loadings. The objective is to maximize the return minus the risk-adjusted return, subject to certain constraints."
+    "This strategy uses convex optimization to determine the optimal weights for a portfolio based on expected returns, the covariance matrix, and factor loadings. The objective is to maximize the return minus the risk-adjusted return, subject to certain constraints.\n",
+    "\n",
+    "### Define the Optimization Function\n",
+    "\n",
+    "This function, `optimize_strategy_I`, takes the expected returns, covariance matrix, factor loadings, beta constraints, and a risk aversion parameter (lambda) to optimize the portfolio weights."
    ]
   },
   {
