--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -529,48 +529,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def long_short_strategy(returns, factors):\n",
-    "    \"\"\"\n",
-    "    Long when market risk premium is positive, short when it is negative.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    returns (DataFrame): Daily returns of ETFs.\n",
-    "    factors (DataFrame): Fama-French factor data.\n",
-    "    \n",
-    "    Returns:\n",
-    "    DataFrame: Strategy returns.\n",
-    "    \"\"\"\n",
-    "    strategy_returns = returns.copy()\n",
-    "    market_return = factors['Mkt-RF']\n",
-    "    \n",
-    "    strategy_returns[market_return > 0] = returns[market_return > 0]\n",
-    "    strategy_returns[market_return <= 0] = -returns[market_return <= 0]\n",
-    "    \n",
-    "    return strategy_returns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal weights for Strategy I: [ 1.57452502 -1.99997055 -1.99999286 -1.99999298 -1.99999269  1.9999992\n",
-      " -0.57456848  1.99999897  1.99999577  1.99999792 -1.99999753  1.99999822]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cvxpy as cp\n",
-    "import numpy as np\n",
-    "\n",
     "def optimize_strategy_I(expected_returns, cov_matrix, factor_loadings, beta_constraints, lambd):\n",
     "    n = len(expected_returns)\n",
     "    w = cp.Variable(n)\n",
@@ -580,6 +542,9 @@
     "    cov_matrix = (cov_matrix + cov_matrix.T) / 2\n",
     "    \n",
     "    # Check if the covariance matrix is symmetric/Hermitian\n",
+    "    def is_symmetric(matrix):\n",
+    "        return np.allclose(matrix, matrix.T)\n",
+    "    \n",
     "    if not is_symmetric(cov_matrix):\n",
     "        raise ValueError(\"Covariance matrix is not symmetric/Hermitian.\")\n",
     "    \n",
@@ -601,16 +566,43 @@
     "    prob = cp.Problem(objective, constraints)\n",
     "    prob.solve()\n",
     "    \n",
-    "    return w.value\n",
+    "    return w.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explanation\n",
     "\n",
-    "# Example usage\n",
-    "beta_constraints = [-0.5, 0.5]\n",
-    "lambd = 0.1\n",
-    "expected_returns = factor_loadings_df['Alpha'].values\n",
-    "cov_matrix = etf_returns.cov().values\n",
+    "1. **Initialization**:\n",
+    "   - `n`: Number of assets.\n",
+    "   - `w`: A variable representing the weights of the assets in the portfolio.\n",
+    "   - `portfolio_return`: The expected return of the portfolio, calculated as the dot product of expected returns and weights.\n",
     "\n",
-    "optimal_weights_I = optimize_strategy_I(expected_returns, cov_matrix, factor_loadings_df, beta_constraints, lambd)\n",
-    "print(\"Optimal weights for Strategy I:\", optimal_weights_I)"
+    "2. **Symmetric Covariance Matrix**:\n",
+    "   - Ensure the covariance matrix is symmetric by averaging it with its transpose.\n",
+    "\n",
+    "3. **Symmetry Check**:\n",
+    "   - `is_symmetric`: Function to check if the covariance matrix is symmetric.\n",
+    "   - Raise an error if the covariance matrix is not symmetric/Hermitian.\n",
+    "\n",
+    "4. **Portfolio Risk**:\n",
+    "   - `portfolio_risk`: Calculated using the quadratic form of the weights and covariance matrix.\n",
+    "\n",
+    "5. **Portfolio Beta**:\n",
+    "   - `portfolio_beta`: Calculated as the dot product of the market risk premium factor loadings and weights.\n",
+    "\n",
+    "6. **Constraints**:\n",
+    "   - Sum of weights equals 1.\n",
+    "   - Portfolio beta is within the specified constraints.\n",
+    "   - Individual weights are bounded between -2 and 2.\n",
+    "\n",
+    "7. **Objective Function**:\n",
+    "   - Maximize the return minus the risk-adjusted return, using `lambda` as the risk aversion parameter.\n",
+    "\n",
+    "8. **Solve the Optimization Problem**:\n",
+    "   - Define and solve the optimization problem using CVXPY."
    ]
   },
   {
