--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -606,6 +606,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example Usage\n",
+    "\n",
+    "We will now use the `optimize_strategy_I` function with example inputs to determine the optimal weights for the portfolio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage\n",
+    "beta_constraints = [-0.5, 0.5]\n",
+    "lambd = 0.1\n",
+    "expected_returns = factor_loadings_df['Alpha'].values\n",
+    "cov_matrix = etf_returns.cov().values\n",
+    "\n",
+    "optimal_weights_I = optimize_strategy_I(expected_returns, cov_matrix, factor_loadings_df, beta_constraints, lambd)\n",
+    "print(\"Optimal weights for Strategy I:\", optimal_weights_I)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
