--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -522,9 +522,18 @@
     "\n",
     "This strategy uses convex optimization to determine the optimal weights for a portfolio based on expected returns, the covariance matrix, and factor loadings. The objective is to maximize the return minus the risk-adjusted return, subject to certain constraints.\n",
     "\n",
-    "### Define the Optimization Function\n",
+    "# Optimization Strategy I Analysis\n",
     "\n",
-    "This function, `optimize_strategy_I`, takes the expected returns, covariance matrix, factor loadings, beta constraints, and a risk aversion parameter (lambda) to optimize the portfolio weights."
+    "## **Executive Summary**\n",
+    "\n",
+    "In this analysis, we derived the optimal weights for a portfolio using a convex optimization strategy. The objective was to maximize the return minus the risk-adjusted return, subject to certain constraints. The strategy provided a highly leveraged portfolio with significant long and short positions across different asset classes and regions. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
+    "\n",
+    "## Optimal Weights for Strategy I\n",
+    "\n",
+    "The optimal weights for the portfolio, determined using the convex optimization strategy, are as follows:\n",
+    "\n",
+    "$$ \\text{Optimal Weights for Strategy I:} $$\n",
+    "$$ [ 1.57452868, -1.99997056, -1.99999286, -1.99999298, -1.99999269, 1.9999992, -0.57457214, 1.99999897, 1.99999577, 1.99999792, -1.99999754, 1.99999822] $$"
    ]
   },
   {
