--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -533,7 +533,54 @@
     "The optimal weights for the portfolio, determined using the convex optimization strategy, are as follows:\n",
     "\n",
     "$$ \\text{Optimal Weights for Strategy I:} $$\n",
-    "$$ [ 1.57452868, -1.99997056, -1.99999286, -1.99999298, -1.99999269, 1.9999992, -0.57457214, 1.99999897, 1.99999577, 1.99999792, -1.99999754, 1.99999822] $$"
+    "$$ [ 1.57452868, -1.99997056, -1.99999286, -1.99999298, -1.99999269, 1.9999992, -0.57457214, 1.99999897, 1.99999577, 1.99999792, -1.99999754, 1.99999822] $$\n",
+    "\n",
+    "## Weight Analysis in Relative (Percentage) Terms\n",
+    "\n",
+    "To provide a clearer understanding, we convert the absolute weights into relative (percentage) terms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Absolute Weight  Relative Weight (%)\n",
+      "ETF                                      \n",
+      "FXE         1.574529             7.108791\n",
+      "EWJ        -1.999971            -9.029605\n",
+      "GLD        -1.999993            -9.029705\n",
+      "QQQ        -1.999993            -9.029706\n",
+      "SPY        -1.999993            -9.029705\n",
+      "SHV         1.999999             9.029734\n",
+      "DBA        -0.574572            -2.594118\n",
+      "USO         1.999999             9.029733\n",
+      "XBI         1.999996             9.029719\n",
+      "ILF         1.999998             9.029728\n",
+      "EPP        -1.999998            -9.029727\n",
+      "FEZ         1.999998             9.029730\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert absolute weights to percentage weights\n",
+    "total_weight = sum(np.abs(optimal_weights_I))\n",
+    "relative_weights = (optimal_weights_I / total_weight) * 100\n",
+    "\n",
+    "# Create a DataFrame for better visualization\n",
+    "etf_names = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
+    "weights_df = pd.DataFrame({\n",
+    "    'ETF': etf_names,\n",
+    "    'Absolute Weight': optimal_weights_I,\n",
+    "    'Relative Weight (%)': relative_weights\n",
+    "})\n",
+    "\n",
+    "weights_df.set_index('ETF', inplace=True)\n",
+    "print(weights_df)"
    ]
   },
   {
